<resources>
    <string name="app_name" translatable="false">ContactlessPrinterOp</string>

    <!-- Common -->
    <string name="accept">Aceptar</string>
    <string name="help">Ayuda</string>
    <string name="close">Cerrar</string>
    <string name="stop">Detener</string>

    <!-- MainActivity -->
    <string name="MainAct_readQr_title">Leer código QR</string>
    <string name="MainAct_print_title">Imprimir archivo</string>
    <string name="MainAct_scan_title">Escanear</string>
    <string name="MainAct_readQr_cd">Leer código QR</string>
    <string name="MainAct_print_cd">Imprimir archivo</string>
    <string name="MainAct_scan_cd">Escanear</string>

    <!-- ReadQrActivity -->
    <string name="ReadQrAct_readQrFailed">El código leído no es correcto</string>
    <string name="ReadQrAct_powerOnWifi">Por favor, enciende el wifi manualmente</string>
    <string name="ReadQrAct_unableDisconnectNet">No se ha podido desconectar de la red actual</string>
    <string name="ReadQrAct_unableToConnect">No se ha podido conectar a la red</string>
    <string name="ReadQrAct_checkNotifications">Acepta la conexión en la barra de notificaciones</string>

   <!-- ReadQrHelpDialog -->
    <string name="Dialog_qr_scanner_help">
        Es posible que utilizando dispositivos modernos, la conexión a la red no pueda establecerse automáticamente.
        Pulse el botón para conectarse manualmente en caso de que ésto no sea posible.
    </string>

    <!-- Scan activity -->
    <string name="ScanAct_startSearchButton">Buscar escáneres</string>
    <string name="ScanAct_stopSearchButton">Detener búsqueda</string>
    <string name="ScanAct_searchingLabel">Buscando escáneres</string>
    <string name="ScanAct_stoppedLabel">Búsqueda detenida</string>

    <!-- Print activity -->
    <string name="PrintAct_chooseFileButton">Seleccionar archivo</string>
    <string name="PrintAct_previewLabel">PREVISUALIZACIÓN</string>
    <string name="PrintAct_imagePreview_cd">Previsualizacion de la image</string>
    <string name="PrintAct_shareFab_cd">Compartir</string>
    <string name="PrintAct_printFab_cd">Imprimir</string>

    <!-- Fragment downloading file -->
    <string name="fragDownloadFile_downloadingFile">Descargando archivo</string>

    <!-- Fragment scan completed -->
    <string name="fragScanCompletedImage">Escaneo completado</string>
    <string name="fragScanCompletedLabel">Escaneo completado</string>

    <!-- Fragment scan error -->
    <string name="fragScanErrorImage">Error en el escaneo</string>
    <string name="fragScanErrorLabel">Se ha producido un error en el escaneo.</string>

    <!-- Fragment scanning -->
    <string name="fragScanningImage">Escaneando</string>
    <string name="fragScanningLabel">Escaneando</string>

    <!-- Scanner list item -->
    <string name="scannerListItemImage">Imagen del escaner</string>

    <!-- Permissions -->
    <string name="permission_camDeniedTitle" >Camara denegada</string>
    <string name="permission_camDeniedMsg" >Se necesita acceso a la cámara para escanear el codigo QR</string>
    <string name="permission_camDeniedExp" >Se necesitan permisos sobre la cámara para acceder al escaneo</string>
    <string name="permission_fineLocDeniedTitle" >Ubicación denegada</string>
    <string name="permission_fineLocDeniedMsg" >Se necesita acceso a la ubicación para conectarse al WiFi</string>
    <string name="permission_fineLocDeniedExp" >Se necesita acceso a la ubicación para conectarse al WiFi</string>
    <string name="permission_extStorageDeniedTitle" >Acceso al almacenamiento externo denegado</string>
    <string name="permission_extStorageDeniedMsg" >Se necesita acceso al almacenamiento externo para obtener archivos</string>
    <string name="permission_extStorageDeniedExp" >Se necesita acceso al almacenamiento externo para obtener archivos</string>
    <string name="ReadQrAct_connectManuallyButton">Conectarse manualmente</string>
    <string name="PrintAct_FileNotChosen_title">Archivo no seleccionado</string>
    <string name="PrintAct_FileNotChosen_msg">Por favor, selecciona algún archivo</string>
    <string name="PrintAct_extensionNotSupported_title">Extension no soportada</string>
    <string name="PrintAct_extensionNotSupported_msg">Las extensiones soportadas son las siguientes:\n
        \n \u25CF PDF
        \n \u25CF HTML
        \n \u25CF Imágenes:
        \n \t\t\t\t \u2022 JPG, JPEG, JPE
        \n \t\t\t\t \u2022 PNG
        \n \t\t\t\t \u2022 BMP
        \n \t\t\t\t \u2022 GIF
        \n \t\t\t\t \u2022 WEBP
    </string>
    <string name="permission_camDenied_endAct">Se necesita acceso a la camara para seguir utilizando esta funcionalidad</string>
    <string name="permission_ExtStorageDenied_endAct">Se necesita acceso al almacenamiento para seguir utilizando esta funcionalidad</string>
    <string name="ScanOption_source_adf">Alimentador</string>
    <string name="ScanOption_source_platen">Bandeja</string>
    <string name="ScanOption_source_camera">Cámara</string>
    <string name="ScanOption_faces_1face">1 cara</string>
    <string name="ScanOption_faces_2face">2 caras</string>
    <string name="ScanOption_format_PDF">PDF</string>
    <string name="ScanOption_format_JPEG">JPEG</string>
    <string name="ScanOption_format_RAW">RAW</string>
    <string name="ScanOption_colorMode_BW">Blanco/Negro</string>
    <string name="ScanOption_colorMode_grey8">Gris 8dpp</string>
    <string name="ScanOption_colorMode_grey16">Gris 16dpp</string>
    <string name="ScanOption_colorMode_color24">Color 24dpp</string>
    <string name="ScanOption_colorMode_color48">Color 48dpp</string>
    <string name="ScanOption_scanner_label">Escáner:</string>
    <string name="ScanOption_adf_label">Alimentador:</string>
    <string name="ADF_STATUS_DUPLEX_PAGE_TOO_LONG">"La página es demasiado larga "</string>
    <string name="ADF_STATUS_DUPLEX_PAGE_TOO_SHORT">La página es demasiado pequeña</string>
    <string name="ADF_STATUS_EMPTY">El alimentador está vacío</string>
    <string name="ADF_STATUS_HATCH_OPEN">Tapa abierta</string>
    <string name="ADF_STATUS_INPUT_TRAY_FAILED">La bandeja del alimentador está rota</string>
    <string name="ADF_STATUS_INPUT_TRAY_OVERLOADED">Bandeja saturada</string>
    <string name="ADF_STATUS_JAM">El alimentador se ha atascado</string>
    <string name="ADF_STATUS_LOADED">Cargado</string>
    <string name="ADF_STATUS_MISPICK">ADF mispick occurred</string>
    <string name="ADF_STATUS_MULTIPICK_DETECTED">Cogiendo varios elementos</string>
    <string name="ADF_STATUS_PROCESSING">Procesando</string>
    <string name="ADF_STATUS_UNKNOWN">Desconocido</string>
    <string name="ADF_STATUS_UNSUPPORTED">No se ha detectado un alimentador</string>
    <string name="SCANNER_STATUS_IDLE">Preparado</string>
    <string name="SCANNER_STATUS_PROCESSING">Escaneo en curso</string>
    <string name="SCANNER_STATUS_STOPPED">Detenido</string>
    <string name="SCANNER_STATUS_TESTING">Preparando</string>
    <string name="SCANNER_STATUS_UNAVAILABLE">No disponible</string>
    <string name="SCANNER_STATUS_UNKNOWN">Desconocido</string>
    <string name="MainAct_readQr_exp">Conéctate a la red escaneando un código QR</string>
    <string name="MainAct_scan_exp">Selecciona algún escáner cercano para operar con él</string>
    <string name="MainAct_print_exp">Escoge un archivo e imprímelo en un dispositivo cercano</string>
    <string name="reason">Razón:</string>
    <string name="REASON_AUTHENTICATION_REQUIRED">Se requiere autenticación</string>
    <string name="REASON_CANCELED_BY_DEVICE">El escaner ha cancelado el proceso</string>
    <string name="REASON_CANCELED_BY_USER">Proceso cancelado por el usuario</string>
    <string name="REASON_CONNECTION_ERROR">Error en la conexión</string>
    <string name="REASON_CONNECTION_TIMEOUT">El escáner no responde</string>
    <string name="REASON_DEVICE_BUSY">El escáner está ocupado</string>
    <string name="REASON_DEVICE_INTERNAL_ERROR">Error interno en el escáner</string>
    <string name="REASON_DEVICE_STOPPED">El escáner está detenido</string>
    <string name="REASON_DEVICE_UNAVAILABLE">El escáner no puede realizar el trabajo en este momento</string>
    <string name="REASON_INVALID_SCAN_TICKET">Opciones de escaneo inválidas</string>
    <string name="REASON_OPERATION_IS_ALREADY_STARTED">El trabajo ya ha comenzado</string>
    <string name="REASON_SCAN_RESULT_WRITE_ERROR">No se puede escribir en el archivo de destino</string>
    <string name="REASON_UNKNOWN">Desconocido</string>
    <string name="fragScanCapabilitiesErrorLabel">No se han podido obtener las características del escáner</string>
    <string name="ScannerLostTitle">Escáner desconectado</string>
    <string name="ScanOption_source_label">Fuente:</string>
    <string name="ScanOption_faces_label">Caras:</string>
    <string name="ScanOption_color_label">Color:</string>
    <string name="ScanOption_resolution_label">Resolución:</string>
    <string name="ScanOption_format_label">Formato:</string>
    <string name="ScannerLostMessage">Se ha perdido la conexión con el escáner</string>
    <string name="ReadQrAct_readQrFailedMsg">El código leído no contiene la información correcta para conectarse. Por favor, inténtelo de nuevo.</string>
    <string name="fragScanValidateTicketError">El escáner no soporta las opciones escogidas</string>
    <string name="PrintAct_shareFab_tooltipText">Compartir el archivo seleccionado</string>
    <string name="PrintAct_printFab_tooltipText">Seleccionar impresora</string>
    <string name="ScanOption_scan_button">Escanear</string>
    <string name="act_scan_preview_discardButtonLabel">Descartar</string>

</resources>